feat(global indicators): implemented jOOQ equivalent for SQL queries to get KPIs : - getProjectsByTypology - getProjectsByPhase - getAverageTimePerTypology - getProjectTypologyPerDomain - getWorkingGroupForCurrentYear enhance OpenAPI specs
